RicReservation - resolved overlapping of events in week timetable

--- a/ric_reservation/app/assets/stylesheets/ric_reservation/timetable.scss
+++ b/ric_reservation/app/assets/stylesheets/ric_reservation/timetable.scss
@@ -1,4 +1,5 @@
 table.timetable {
+	margin-bottom: 15px;
 	width: 100%;	
 	border: 1px solid #e5e5e5 !important;
 	background-color: #ffffff !important;
